fix promote btn alignment.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -23,13 +23,14 @@ body {
   box-shadow: 0 0 1px #333;
 
   .promote, .unpromote {
+    border-top: 1px solid @btn-primary-border;
     width: 86px;
   }
 
   .box-medium {
     width: 150px;
   }
-  
+
   .box-large {
     width: 236px;
   }
